<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.josand.dc_app.UI.Main.Group.GroupFragment">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.CardView
                    android:id="@+id/cardviewHeroesGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="2.5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/textViewHeroGroup"
                            android:text="@string/hero"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:paddingBottom="5dp"/>

                        <TextView
                            android:text="@string/seeMore"
                            android:id="@+id/seeMoreHeroGroup"
                            android:clickable="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentTop="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="RelativeOverlap" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recyclerViewHeroGroup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/textViewHeroGroup" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardviewVillianGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2.5dp"
                    android:layout_marginBottom="2.5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/textViewVillianGroup"
                            android:text="@string/villian"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:paddingBottom="5dp"/>

                        <TextView
                            android:text="@string/seeMore"
                            android:id="@+id/seeMoreVillianGroup"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentTop="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="RelativeOverlap" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recyclerViewVillianGroup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/textViewVillianGroup" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardviewAntiHeroGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2.5dp"
                    android:layout_marginBottom="2.5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/textViewAntiHeroGroup"
                            android:text="@string/antihero"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:paddingBottom="5dp"/>

                        <TextView
                            android:text="@string/seeMore"
                            android:id="@+id/seeMoreAntiHeroGroup"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentTop="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="RelativeOverlap" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recyclerViewAntiHeroGroup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/textViewAntiHeroGroup"/>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

</FrameLayout>
